# Research-Paper-Buddy-Autonomous-Research-Agent-with-Visual-Interactive-Features

./: .env  README.md  app.py  main.py  pyproject.toml  requirements.txt  test.py
agents/: booklet_agent.py  chatbot_agent.py  citation_agent.py  explainer_agent.py  reader_agent.py  segmenter_agent.py  visualizer_agent.py
chains/: booklet_chain.py  chatbot_chain.py
crew/: setup_crew.py
outputs/: booklet (1).tex  booklet of perceptron.tex  booklet of self driving car.tex  booklet.tex  booklet_biotech.tex
src/mp_2/: crew.py  main.py
tools/: build_rag_chatbot.py  compile_booklet.py  fetch_citations.py  generate_visuals.py  parse_pdf.py  segment_text.py  simplify_text.py
ui/: app.py
utils/: config.py  embeddings.py  latex_generator.py  pdf_loader.py  semantic_scholar.py  text_splitter.py  vector_store.py  visualization.py
vectorstore/ba75ab12-5e1c-4a92-9a32-15a3cc9ba536/: index_metadata.pickle
