[project]
name = "mp_2"
version = "0.1.0"
description = "mp_2 using crewAI"
authors = [{ name = "Your Name", email = "you@example.com" }]
requires-python = ">=3.10,<3.14"
dependencies = [
    "crewai[tools]>=0.152.0,<1.0.0"
]

[project.scripts]
mp_2 = "mp_2.main:run"
run_crew = "mp_2.main:run"
train = "mp_2.main:train"
replay = "mp_2.main:replay"
test = "mp_2.main:test"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.crewai]
type = "crew"
